# sudden-death

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .python-lint  .textlintrc  Pipfile  Pipfile.lock-3.7  Pipfile.lock-3.8  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: add-to-task-list.yml  codeql-analysis.yml  dispatch-pr-format-sudden-death.yml  format-json-yml.yml  github-actions-cache-cleaner.yml  osv-scanner.yml  pr-check-npm.yml  pr-check-yarn.yml  pr-close-sudden-death.yml  pr-copy-ci-sudden-death.yml  pr-format.yml  pr-test.yml  pr-textlint.yml  pr-update-gitleaks.yml  pr-update-readme-sudden-death.yml  secretlint.yml
scripts/: install_npm.sh  npm_ci.sh  uv_install.sh
scripts/dispatch_pr_format_sudden_death/dispatch_pr_format/: dispatch_event.ts
scripts/pr_copy_ci_sudden_death/pr_copy_ci/: copy_ci.sh  copy_package.ts  create_pull_request.js  get_pull_requests.js  npm_ci.sh
scripts/pr_format/pr_format/: fix_pyproject.py  format.sh  get_version.sh
scripts/pr_test/pr_super_lint/: npm_ci.sh  set_venv_path.sh
sudden_death/: __init__.py
