[project]
name = "sudden_death"
version = "0.0.1"
description = "突然の死(ハリフキダシ)を生成するツール"
requires-python = "==3.13.5"
dependencies = [ "click==8.2.1", "pyperclip>=1.5.27", "tomlkit==0.13.3"]
[[project.authors]]
name = "koluku"

[dependency-groups]
dev = [ "autopep8==2.3.2", "pylint==3.3.7", "mypy==1.17.0", "flake8==7.3.0", "importlib-metadata==8.7.0", "toml==0.10.2", "types-toml==0.10.8.20240310", "setuptools==80.9.0", "toml==0.10.2",]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/koluku/sudden-death"

[tool.uv]
required-version = "0.7.21"
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.package-data]
sudden_death = [ "py.typed",]
