[project]
name = "sudden_death"
version = "0.0.1"
description = "突然の死(ハリフキダシ)を生成するツール"
requires-python = "==3.14.0"
dependencies = [
  "click==8.3.0",
  "pyperclip>=1.5.27",
]
[[project.authors]]
name = "koluku"

[dependency-groups]
dev = [
  "autopep8==2.3.2",
  "pylint==4.0.3",
  "mypy==1.18.2",
  "flake8==7.3.0",
  "importlib-metadata==8.7.0",
  "tomlkit==0.13.3",
  "setuptools==80.9.0",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/koluku/sudden-death"

[tool.uv]
required-version = "0.9.8"
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.package-data]
sudden_death = [ "py.typed",]
