[project]
name = "sudden_death"
version = "0.0.1"
description = "突然の死(ハリフキダシ)を生成するツール"
requires-python = "==3.14.2"
dependencies = [
  "click==8.3.0",
  "pyperclip>=1.5.27",
]
[[project.authors]]
name = "koluku"

[dependency-groups]
dev = [
  "autopep8==2.3.2",
  "pylint==4.0.4",
  "sqlfluff==4.0.0",
  "mypy==1.19.1",
  "flake8==7.3.0",
  "importlib-metadata==8.7.1",
  "tomlkit==0.14.0",
  "setuptools==80.10.2",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/koluku/sudden-death"

[tool.uv]
required-version = "0.9.18"
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.package-data]
sudden_death = [ "py.typed",]
